--- a/Libraries-API-UE1/index.html
+++ b/Libraries-API-UE1/index.html
@@ -8,8 +8,6 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
-    <div id="root">
-        
-    </div>
+    <div id="root"></div>
   </body>
 </html>
