--- a/Libraries-API-UE2/vite-project/src/index.html
+++ b/Libraries-API-UE2/vite-project/src/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/fetch.js"></script>
   </head>
   <body>
     <div id="app"></div>
