--- a/ChatBot/app/src/index.html
+++ b/ChatBot/app/src/index.html
@@ -7,5 +7,31 @@
 
     <script type="module" src="js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <main class="bg-gray-500 h-screen w-screen p-5">
+      <div id="messages" class="flex flex-col gap-2">
+        <div class="w-2/3 bg-white p-5 rounded-md self-start">
+          <span class="text-gray-500 text-sm">ChatGPT</span>
+          <p>Hi, wie kann ich dir helfen?</p>
+        </div>
+      </div>
+      <form
+        id="chat-form"
+        class="w-full flex justify-between gap-2 fixed bottom-5 left-5">
+        <div class="flex flex-col w-3/4">
+          <label for="input">Deine Nachricht</label>
+          <input
+            type="text"
+            name="input"
+            placeholder="Nachricht eingeben... "
+            class="p-2 rounded-md" />
+        </div>
+
+        <input
+          type="submit"
+          value="Absenden"
+          class="w-1/4 bg-blue-800 rounded-md text-white p-2" />
+      </form>
+    </main>
+  </body>
 </html>
